# w24ok-warehouse-metrics

./: README.md
django/: Dockerfile  README.md  build.sh  env_file.env_  manage.py  requirements.txt
django/main/: admin.py  graphene_types.py  models.py  schema.py
django/main/management/: README.md
django/main/management/commands/: loading_status.py  (+2 more)
django/main/migrations/: 0001_initial.py  0002_rename_transport_charges_transaction_fare.py  0003_transaction_warh.py  0004_auto_20210527_1459.py  0005_reductionfine.py  0006_warehouse_short_name.py  0007_alter_warehouse_name.py  0008_warehouse_datetime.py  0009_auto_20210530_1745.py  0010_auto_20210530_2003.py  0011_alter_warehouse_name.py  0012_auto_20210603_1424.py  0013_prolongation.py  0014_alter_transaction_cod.py  0015_auto_20210622_1601.py  0016_alter_warehouse_short_name.py  0017_auto_20211123_0828.py  0018_alter_transaction_target.py
django/main/resolvers/: Batching.py  ProlongationsMutation.py  ReductionFineMutation.py  TransactionsMutation.py  in_out_users.py  month_to_month.py
django/static-cdn-local/js/: w24ok2-django-ui.js
django/templates/: base.html  css.html  js.html  react.html
django/user_token/: schema.py
django/w24ok2/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
django/w24ok2-ui/: package-lock.json  package.json  webpack.config.js
django/w24ok2-ui/src/: App.js  index.js
reports/: Dockerfile  README.md  Report.py  ReportError.py  ReportV2.py  build.sh  main.py  pyproject.toml
reports/schema/: GET_TOKEN.gql  PUSH_DECREASES.gql  PUSH_PROLONGATIONS.gql  PUSH_TRANSACTIONS.gql
(+21 files in other folders)
