[tool.poetry]
name = "w24ok-reports"
version = "0.1.0"
description = ""
authors = ["ArthurGolubev <gg.arthur.go@gmail.com>"]
readme = "README.md"
packages = [{include = "w24ok_reports"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.0"
loguru = "^0.6.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
